// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenize markEdits withHunk 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`tokenize markEdits withHunk 2`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`tokenize markEdits withHunk 3`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`tokenize markEdits withHunk 4`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`tokenize toTokenTrees php will render __PHP__ 1`] = `
Array [
  Object {
    "children": Array [],
    "type": "root",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "type": "text",
                    "value": "<",
                  },
                ],
                "properties": Object {
                  "className": Array [
                    "token",
                    "punctuation",
                  ],
                },
                "tagName": "span",
                "type": "element",
              },
              Object {
                "type": "text",
                "value": "img",
              },
            ],
            "properties": Object {
              "className": Array [
                "token",
                "tag",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "type": "text",
                    "value": " ",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "type": "text",
                        "value": "style",
                      },
                    ],
                    "properties": Object {
                      "className": Array [
                        "token",
                        "attr-name",
                      ],
                    },
                    "tagName": "span",
                    "type": "element",
                  },
                ],
                "properties": Object {
                  "className": Array [
                    "token",
                    "attr-name",
                  ],
                },
                "tagName": "span",
                "type": "element",
              },
              Object {
                "children": Array [
                  Object {
                    "type": "text",
                    "value": "=\\"",
                  },
                ],
                "properties": Object {
                  "className": Array [
                    "token",
                    "punctuation",
                  ],
                },
                "tagName": "span",
                "type": "element",
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "type": "text",
                        "value": "width",
                      },
                    ],
                    "properties": Object {
                      "className": Array [
                        "token",
                        "property",
                      ],
                    },
                    "tagName": "span",
                    "type": "element",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "type": "text",
                        "value": ":",
                      },
                    ],
                    "properties": Object {
                      "className": Array [
                        "token",
                        "punctuation",
                      ],
                    },
                    "tagName": "span",
                    "type": "element",
                  },
                  Object {
                    "type": "text",
                    "value": "___PHP",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "type": "text",
                        "value": "0",
                      },
                    ],
                    "properties": Object {
                      "className": Array [
                        "token",
                        "number",
                      ],
                    },
                    "tagName": "span",
                    "type": "element",
                  },
                  Object {
                    "type": "text",
                    "value": "___%",
                  },
                ],
                "properties": Object {
                  "className": Array [
                    "token",
                    "attr-value",
                  ],
                },
                "tagName": "span",
                "type": "element",
              },
              Object {
                "children": Array [
                  Object {
                    "type": "text",
                    "value": "\\"",
                  },
                ],
                "properties": Object {
                  "className": Array [
                    "token",
                    "punctuation",
                  ],
                },
                "tagName": "span",
                "type": "element",
              },
            ],
            "properties": Object {
              "className": Array [
                "token",
                "style-attr",
                "language-css",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "type": "text",
            "value": " ",
          },
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "src",
              },
            ],
            "properties": Object {
              "className": Array [
                "token",
                "attr-name",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "type": "text",
                    "value": "=",
                  },
                ],
                "properties": Object {
                  "className": Array [
                    "token",
                    "punctuation",
                  ],
                },
                "tagName": "span",
                "type": "element",
              },
              Object {
                "children": Array [
                  Object {
                    "type": "text",
                    "value": "'",
                  },
                ],
                "properties": Object {
                  "className": Array [
                    "token",
                    "punctuation",
                  ],
                },
                "tagName": "span",
                "type": "element",
              },
              Object {
                "type": "text",
                "value": "___PHP1___",
              },
              Object {
                "children": Array [
                  Object {
                    "type": "text",
                    "value": "'",
                  },
                ],
                "properties": Object {
                  "className": Array [
                    "token",
                    "punctuation",
                  ],
                },
                "tagName": "span",
                "type": "element",
              },
            ],
            "properties": Object {
              "className": Array [
                "token",
                "attr-value",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "/>",
              },
            ],
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "token",
            "tag",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "type": "root",
  },
]
`;

exports[`tokenize toTokenTrees refractor highlight 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "<",
              },
            ],
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "type": "text",
            "value": "img",
          },
        ],
        "properties": Object {
          "className": Array [
            "token",
            "tag",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": " ",
              },
              Object {
                "children": Array [
                  Object {
                    "type": "text",
                    "value": "style",
                  },
                ],
                "properties": Object {
                  "className": Array [
                    "token",
                    "attr-name",
                  ],
                },
                "tagName": "span",
                "type": "element",
              },
            ],
            "properties": Object {
              "className": Array [
                "token",
                "attr-name",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "=\\"",
              },
            ],
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "type": "text",
                    "value": "width",
                  },
                ],
                "properties": Object {
                  "className": Array [
                    "token",
                    "property",
                  ],
                },
                "tagName": "span",
                "type": "element",
              },
              Object {
                "children": Array [
                  Object {
                    "type": "text",
                    "value": ":",
                  },
                ],
                "properties": Object {
                  "className": Array [
                    "token",
                    "punctuation",
                  ],
                },
                "tagName": "span",
                "type": "element",
              },
              Object {
                "type": "text",
                "value": "___PHP",
              },
              Object {
                "children": Array [
                  Object {
                    "type": "text",
                    "value": "0",
                  },
                ],
                "properties": Object {
                  "className": Array [
                    "token",
                    "number",
                  ],
                },
                "tagName": "span",
                "type": "element",
              },
              Object {
                "type": "text",
                "value": "___%",
              },
            ],
            "properties": Object {
              "className": Array [
                "token",
                "attr-value",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "\\"",
              },
            ],
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "token",
            "style-attr",
            "language-css",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "type": "text",
        "value": " ",
      },
      Object {
        "children": Array [
          Object {
            "type": "text",
            "value": "src",
          },
        ],
        "properties": Object {
          "className": Array [
            "token",
            "attr-name",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "=",
              },
            ],
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "'",
              },
            ],
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "type": "text",
            "value": "___PHP1___",
          },
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "'",
              },
            ],
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "token",
            "attr-value",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "type": "text",
            "value": "/>",
          },
        ],
        "properties": Object {
          "className": Array [
            "token",
            "punctuation",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "token",
        "tag",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
]
`;

exports[`tokenize tokenize withHunk 1`] = `
Object {
  "new": Array [
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "    it('App renders correctly', () => {",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "        expect(renderer.create(<App diffText={'diff'} />).toJSON()).toMatchSnapshot();",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "    });",
      },
    ],
  ],
  "old": Array [
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "    it('App renders correctly', () => {",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "        expect(renderer.create(<App diffText={'deff'} />).toJSON()).toMatchSnapshot();",
      },
    ],
    Array [
      Object {
        "type": "text",
        "value": "    });",
      },
    ],
  ],
}
`;
